# ConfigAsCode

./: README.md  old_set_up_file  pyproject.toml  setup.cfg  setup.py
CodifiedNorms/: __init__.py  policy.py  setup.py  unit_tests.py
Framework/: Frozen.py  Policy.py  __init__.py  policy.py
codified/: __init__.py  __main__.py  policy.py  repo.py  some.json  variables.py
codifiednorms/: __init__.py  __main__.py  data_types.py  freezer.py  policy.py  unit_tests.py
codifiednorms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
policies/test2/: test21.json  test3.json
repository/: AllVals.json  NoVals.json  NullParamsPolicies.json
repository/codified/: param_param1.json  some.json  target_some target.json  target_target_one.json  value_value123.json  values~all.json  values~none.json  value~any.json
repository/compiled/: AllVals.json  NoVals.json  NullParamsPolicies.json
repository/policies/auth/: base0.json
repository/policies/test/: Config_1628416704.json  PolicySet_1628416686.json  Policy_1628415973.json  Policy_1628416656.json  Policy_1628514545.json  Policy_1628514777.json  base1.json  param-80cf50592213519fa488121daab97bb6.json  param_param1.json  parampolicy-021a25143aef573e98077e3d77d99e88.json  parampolicy-57356c37746950aba61d2a00a579c0b9.json  parampolicy_1628889123.json  parampolicy_94c60347e4905426805ff826ca2ffa2c.json  parampolicy_Param1Policy1.json  parampolicy_Param1Policy2.json  parampolicy_Param1Policy3.json  parampolicy_a1ae3939389b5ec8a8e372cd48d48e24.json  parampolicy_param1policy.json  parampolicy_param1policy2.json  parampolicy_param1policy3.json  parampolicyx.json  paramspolicies_ParamPolicies.json  paramspolicies_ParamPolicies1.json  paramspolicies_paramspol1.json  policy_1628969977.json  px.json  target-3cad0b4b79a4550894af119f8164bdfd.json  target_target1.json  test1.json  value-8991ba462f725c9d9851931bcb8076f8.json  value-fb75d1809550506bbbb199272ba7f119.json  value_value1.json  value_value2.json  values-9220bf6d875352c5886297b88da404c1.json  values-b1a3c0b14afd54999e55ada7c61dcbc2.json  values-ec14127e97a35d34b2773d5a8e8fd715.json  values_1628881815.json  (+5 more)
(+36 files in other folders)
