[build-system]
requires = [
  "setuptools >= 57.4.0",
  "wheel >= 0.36.2",
]

[project]
name = "codifiednorms"
authors = [
    {name = "Vikas Munshi", email = "vikas.munshi@gmail.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dynamic = ['version', 'description']