[metadata]
name = codifiednorms
version = 0.1.20210808
description = Python3 library for Codified Norms
long_description = file: README.md, LICENSE
license = GNU General Public License v3 (GPLv3)
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
author = Vikas Munshi
author_email = vikas.munshi@gmail.com
download_url = https://github.com/vikasmunshi/ConfigAsCode/

[options]
packages = codifiednorms
