[metadata]
name = codifiednorms
version = attr: codifiednorms.__version__
description = Python3 library to Manage Codified Norms and Config as Code
long_description = file: README.md, LICENSE
license = GNU General Public License v3 (GPLv3)
classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        License :: OSI Approved :: GNU General Public License v3 (GPLv3)
        Operating System :: POSIX :: Linux
        Operating System :: MacOS :: MacOS X
        Operating System :: Microsoft :: Windows
author = Vikas Munshi
author_email = vikas.munshi@gmail.com
download_url = https://github.com/vikasmunshi/ConfigAsCode/

[options]
zip_safe = True
packages = codifiednorms